<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_goals_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/filter_button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/context_label"
            android:backgroundTint="@color/completed"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/home_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/context_label"
            android:backgroundTint="@color/home"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/home"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/work_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/context_label"
            android:backgroundTint="@color/work"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/work"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/school_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/context_label"
            android:backgroundTint="@color/school"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/school"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/errand_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/context_label"
            android:backgroundTint="@color/errand"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/errand"
            android:textSize="16sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
